Project for CPSC 2125 containing the first 3 labs (covering CSS, tags, images and DOM.)

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
 
 <head>
-	<h3 style="text-align:center">[Insert Cool Caption Here]</h3>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>KAFC</title>
+	<title>Smith CPSC 2125 Portfolio</title>
+  <link href ="style.css" rel="stylesheet" type ="text/css"/>
+  <banner></banner>
 </head>
-
 <body>
-	<img src="https://i.ytimg.com/vi/tuxck445_1A/maxresdefault.jpg">
-    <p>Chicken or lizard? Lizard or chicken?<p>
-    <p>Which one is the mightiest? <p>
-    <p>Which one is the tastiest? </p>
-    <p>The world may never know, because this is just an HTML file...<p>  
-    <h6>[Insert less cool caption here]<h6>
-  </body>
+	<header><h1> Welcome to Joseph Smith's CPSC 2125 Portfolio! </h1></header>
+  <main>
+    <img src ="/images/Logo.png">
+	<nav>
+	<ul>
+		<li><a href="lab1.html">The First Lab </a></li>
+		<li><a href="lab2.html">The Second Lab </a></li>
+		<li><a href ="lab3.html">The Third Lab</a></li>
+	</ul>
+	</nav>
+	</main>
+   <footer>
+  </footer>
+</body>
 </html>
