--- a/lab1.html
+++ b/lab1.html
@@ -3,19 +3,19 @@
   <head>
     <title>Smith Lab 1KAFC</title>
       <link href ="style.css" rel="stylesheet" type ="text/css"/>
+      <h1>Lab 1</h1>
        </head>
-       <!--favicons are the way you get the tab icons-->
   <body>
-    <head><h1>Lab 1</h1></head>
-    <main>
-      <img src ="/images/Logo.png">
-  	<nav>
+    <header><img src ="/images/Logo.png"></header>
+     <nav>
     <ul>
       <li><a href = "index.html">Home</a></li> 
       <li><a href = "lab2.html">The Second Lab</a></li>
 	  <li><a href = "lab3.html">The Third Lab</a></li>
     </ul>
-	</nav>
+	</nav>	
+    <main>
+  
     <h3>Lab 1 Instructions</h3>
     <p>Write an index.html page using your favorite editor. Create a new folder for the file. Call it Labs. Use standard format HTML5 with head and body tags. Add two headings of different sizes, one paragraph, and one image. You can link to an externally hosted image or use a local image. In future labs, you will be required to use a local image. 
 
@@ -43,6 +43,7 @@ Create a Repl.it account. Create a new HTML/CSS/JS Repl.it and add your HTML cod
     <p>Which one is the tastiest? </p>
     <p>The world may never know, because this is just an HTML file...</p>  
    </main>
+  
     <footer>
       <h6>[Insert less cool caption here]</h6>
     </footer>
