--- a/lab3.html
+++ b/lab3.html
@@ -5,17 +5,18 @@
       <link href ="style.css" rel="stylesheet" type ="text/css"/>
        </head>
   <body>
-    <header><h1>Lab 3</h1></header>
+    <header><h1>Lab 3</h1>
+      <img src ="/images/Logo.png">
+    </header>
 	<main>
-    <img src ="/images/Logo.png">
-  <nav>
+</main> 
+<nav>
      <ul>
       <li><a href = "index.html">Home</a></li> 
       <li><a href = "lab1.html">The First Lab</a></li>
 	  <li><a href = "lab2.html">The Second Lab</a></li>
     </ul>
 	</nav>
-</main>
  <footer>
   </footer>
   </body>
