--- a/lab2.html
+++ b/lab2.html
@@ -5,16 +5,19 @@
           <link href ="style.css" rel="stylesheet" type ="text/css"/>
        </head>
   <body>
-    <header><h1>Lab 2</h1></header>
-    <main>
-      <img src ="/images/Logo.png">
-	<nav>
+    <header><h1>Lab 2</h1>
+    <img src ="/images/Logo.png">
+    </header>
+    <nav>
      <ul>
       <li><a href = "index.html">Home</a></li> 
       <li><a href = "lab1.html">The First Lab</a></li>
 	  <li><a href = "lab3.html">The Third Lab</a></li>
     </ul>
 	</nav>
+    <main>
+    
+
   <h3>Lab 2 Instructions</h3>
 <p>You will log into your repl.it account, fork your lab 1 repl.it to create a Repl.it for lab two. Copy index and rename it lab 2. Create a new page for lab 2. Then you will write code to turn index.html into the main page of a labs portfolio. Add navigation hyperlinks so the user can surf to all lab pages and back to index. The navigation should be on every page. Put the instructions for lab 1 on the lab 1 page. Put the instructions for lab 2 on the lab 2 page. Remember all text needs to be in a tag. On the index page add some text saying welcome to your CPSC 2125 Labs 1-6 portfolio. You fork and add to this for labs 3, 4, 5, and 6. 
 To submit your work, get the shareable link (use the invite button to generate a join link) and paste it into the submission box in CougarView.</p>
