Added lab 6 page with alternative grid and nav styles. and placeholder text.

--- a/index.html
+++ b/index.html
@@ -2,21 +2,31 @@
 <html>
 <head>
 	<title>Smith CPSC 2125 Portfolio</title>
-  <link href ="style.css" rel="stylesheet" type ="text/css"/>
+      <link href ="style.css" rel="stylesheet" type ="text/css"/>
 </head>
 <body>
-	<header><h1> Welcome to Joseph Smith's CPSC 2125 Portfolio! </h1></header>
-  <main>
-    <img src ="/images/Logo.png">
-	</main>
-  <nav>
-	<ul>
-		<li><a href="lab1.html">The First Lab </a></li>
-		<li><a href="lab2.html">The Second Lab </a></li>
-		<li><a href ="lab3.html">The Third Lab</a></li>
-	</ul>
-	</nav> 
-   <footer>
-  </footer>
+    <div class = "grid">
+      <header class = "header">
+        <h1> Welcome to Joseph Smith's CPSC 2125 Portfolio! </h1>
+        <img src ="images/rsz_logo.png">
+      </header>
+      <nav class = "nav">
+        <ul>
+          <div class ="button"><li><a href="lab1.html">The First Lab </a></li></div>
+          <div class ="button"><li><a href="lab2.html">The Second Lab </a></li></div>
+          <div class ="button"><li><a href ="lab3.html">The Third Lab</a></li></div>
+          <div class ="button"><li><a href = "lab4.html">The Fourth Lab</a></li></div>
+          <div class ="button"><li><a href = "lab5.html">The Fifth Lab</a></li></div>
+          <div class ="button"><li><a href = "lab6.html">The Sixth Lab</a></li></div>
+	      </ul>
+      </nav>
+      <main class="main">
+      </main>
+      <footer class="footer">
+         <p>Contact Us:<br><br>Phone - (458)-567-4234<br>Email - billybob@email.com </p>
+         <p>Page Last Modified: <span id="update_date"></span></p>
+      </footer>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
