--- a/lab1.html
+++ b/lab1.html
@@ -3,49 +3,47 @@
   <head>
     <title>Smith Lab 1KAFC</title>
       <link href ="style.css" rel="stylesheet" type ="text/css"/>
-      <h1>Lab 1</h1>
        </head>
   <body>
-    <header><img src ="/images/Logo.png"></header>
-     <nav>
-    <ul>
-      <li><a href = "index.html">Home</a></li> 
-      <li><a href = "lab2.html">The Second Lab</a></li>
-	  <li><a href = "lab3.html">The Third Lab</a></li>
-    </ul>
-	</nav>	
-    <main>
-  
-    <h3>Lab 1 Instructions</h3>
-    <p>Write an index.html page using your favorite editor. Create a new folder for the file. Call it Labs. Use standard format HTML5 with head and body tags. Add two headings of different sizes, one paragraph, and one image. You can link to an externally hosted image or use a local image. In future labs, you will be required to use a local image. 
+    <div class = "grid">
+      <header class = "header"><h1>Lab 1</h1>
+        <img src ="images/rsz_logo.png"></header>
+      <nav class = "nav">
+        <ul>
+          <div class ="button"><li><a href="index.html">Home</a></li></div>
+          <div class ="button"><li><a href="lab2.html">The Second Lab </a></li></div>
+          <div class ="button"><li><a href ="lab3.html">The Third Lab</a></li></div>
+          <div class ="button"><li><a href = "lab4.html">The Fourth Lab</a></li></div>
+          <div class ="button"><li><a href = "lab5.html">The Fifth Lab</a></li></div>
+          <div class ="button"><li><a href = "lab6.html">The Sixth Lab</a></li></div>
+        </ul></nav>
+      <main class = "main">
+        <h3>Lab 1 Instructions</h3>
+          <p>Write an index.html page using your favorite editor. Create a new folder for the file. Call it Labs. Use standard format HTML5 with head and body tags. Add two headings of different sizes, one paragraph, and one image. You can link to an externally hosted image or use a local image. In future labs, you will be required to use a local image. Upload your files to Repl.it and check that everything is working. Use the invite button to generate a link to share. Upload the link to CougarView. Save the file index.html in folder Labs. Submit folder. Create a Repl.it account. Create a new HTML/CSS/JS Repl.it and add your HTML code. Use the invite button to generate a join link and submit the link. </p>
 
-Upload your files to Repl.it and check that everything is working. Use the invite button to generate a link to share. Upload the link to CougarView. 
-
-Save the file index.html in folder Labs. Submit folder.
-
-Create a Repl.it account. Create a new HTML/CSS/JS Repl.it and add your HTML code. Use the invite button to generate a join link and submit the link. </p>
-
-<p>Grading Checklist: </p>
-  <ul>
-    <li>index.html file created</li>
-    <li>head and body tags used correctly</li>
-    <li>Two headings of different sizes</li>
-    <li>One paragraph</li>
-    <li>One image</li>
-    <li>index.html and any images (if not linked from the web) uploaded in a zipped folder to CougarView</li>
-    <li>Repl.it link uploaded to CougarView</li>
-  </ul>
-   <p> <a href="https://www.youtube.com/watch?v=eqgUGD7353M">Lab 1 instruction video</a> will help if you have any questions. Use your textbook, chapter 2,1 and 2.2. </p>
-    <h3> [Insert Cool Caption Here]</h3>
-    <img src="/images/Notzilla vs. Sheep.png" width = "480">
-    <p><span style="text-decoration:line-through;">Chicken</span> Sheep or lizard? Lizard or <span style="text-decoration:line-through;">chicken</span> sheep?</p>
-    <p>Which one is the mightiest? </p>
-    <p>Which one is the tastiest? </p>
-    <p>The world may never know, because this is just an HTML file...</p>  
-   </main>
-  
-    <footer>
-      <h6>[Insert less cool caption here]</h6>
-    </footer>
+          <h6>Grading Checklist: </h6>
+            <ul>
+              <li>index.html file created</li>
+              <li>head and body tags used correctly</li>
+              <li>Two headings of different sizes</li>
+              <li>One paragraph</li>
+              <li>One image</li>
+              <li>index.html and any images (if not linked from the web) uploaded in a zipped folder to CougarView</li>
+              <li>Repl.it link uploaded to CougarView</li>
+            </ul>
+            <p> <a href="https://www.youtube.com/watch?v=eqgUGD7353M">Lab 1 instruction video</a> will help if you have any questions. Use your textbook, chapter 2,1 and 2.2. 
+            </p>
+              <h3> [Insert Cool Caption Here]</h3>
+              <img src="/images/Notzilla vs. Sheep.png" width = "480">
+              <p><span style="text-decoration:line-through;">Chicken</span> Sheep or lizard? Lizard or <span style="text-decoration:line-through;">chicken</span> sheep?</p>
+              <p>Which one is the mightiest? </p>
+              <p>Which one is the tastiest? </p>
+              <p>The world may never know, because this is just an HTML file...</p>  </div>
+      </main>
+      <footer class="footer">
+         <p>Contact Us:<br><br>Phone - (458)-567-4234<br>Email - billybob@email.com </p>
+         <p>Page Last Modified: <span id="update_date"></span></p>
+      </footer>
+    <script src="script.js"></script>
   </body>
 </html>
