--- a/lab3.html
+++ b/lab3.html
@@ -5,19 +5,45 @@
       <link href ="style.css" rel="stylesheet" type ="text/css"/>
        </head>
   <body>
-    <header><h1>Lab 3</h1>
-      <img src ="/images/Logo.png">
-    </header>
-	<main>
-</main> 
-<nav>
-     <ul>
-      <li><a href = "index.html">Home</a></li> 
-      <li><a href = "lab1.html">The First Lab</a></li>
-	  <li><a href = "lab2.html">The Second Lab</a></li>
-    </ul>
-	</nav>
- <footer>
-  </footer>
+    <div class = "grid">
+      <header class = "header"><h1>Lab 3</h1>
+      <img src ="images/rsz_logo.png"></header>
+      <nav class = "nav"> 
+      <ul>
+        <div class ="button"><li><a href="index.html">Home</a></li></div>
+        <div class ="button"><li><a href="lab1.html">The First Lab </a></li></div>
+        <div class ="button"><li><a href ="lab2.html">The Second Lab</a></li></div>
+        <div class ="button"><li><a href = "lab4.html">The Fourth Lab</a></li></div>
+        <div class ="button"><li><a href = "lab5.html">The Fifth Lab</a></li></div>
+        <div class ="button"><li><a href = "lab6.html">The Sixth Lab</a></li></div>
+      </ul></nav>
+      <main class ="main">
+        <p>Fork lab 2 Repl.it to copy for lab 3. 
+        Add a lab3.html page to the project and add the instructions. Add a Lab 3 hyperlink to the index page and all other pages. Add semantic tags to each page in your site. Use at least &ltheader&gt &ltnav&gt &ltmain&gt and &ltfooter&gt. Recall that those don't change the look of the resulting page, they only divide your page into logical chunks. ioT devices could now understand your page layout.
+        Add an images folder to your site. Drag & Drop a header banner or logo image to this folder. Careful with copyright infringement! Please use resources from the Creative Commons or something you create yourself. You can also add your image from lab 1. Add this logo to all pages. 
+        Use the existing style sheet / CSS file: add a style for the body tag. Add a font color and a background color (there is a trick, watch the video). Also go out to w3Schools CSS page to get inspired. Run your pages to see the result.
+        Turn in your repl.it link. 
+        Optional: GtHub tasks - our objectives area to connect to Github from your repl (click a button as shown in the video). Push your code to Github. Submit your repo's Github link in CougarView. Hint: click the green CODE button to copy the link.
+        In the repl: Use the version control button to create a local Git repo. Click the Connect to Github button to create a Github repo and 
+        connect. That gives you an initial commit and uploads your files to Github Commit your code with a descriptive message. Make additional commits after each milestone. This allows you to safely work on just parts of the project at a time. To get that, log into GitHub, find the repo, and click the green CODE button. 
+        Copy the link and paste into drop box in CougarView.</p>
+        Grading checklist:
+          <ul>
+           <li><lab 3 page added and link to it added to nav list on all other pages</li>
+            <li>Semantic tags added to ALL pages (minimum of header, nav, main, footer) (All your content should be organized under one of these tags.)</li> 
+            <li>Images folder with a banner image (logo) and the image from lab 1 (don't violate copyright!)</li>
+            <li>Add banner image (logo) to all pages</li>
+            <li>CSS file has style for the body tag, a font color and a background color</li>
+            <li>All text in HTML enclosed in tags. Both HTML and CSS files are organized and easy to read. Use comments!</li> 
+            <li>Repl.it link uploaded to CougarView</li>
+          </ul>
+        <p>If you have any questions watch the Lab 3 Lecture ( <a href ="https://youtu.be/KjyXgwd8__g">https://www.youtube.com/watch?v=KjyXgwd8__g&list=PLeOTBrUgeayw009mqU8urXd9MJsLvX8de&index=7</a>).</p>
+      </main>
+      <footer class="footer">
+         <p>Contact Us:<br><br>Phone - (458)-567-4234<br>Email - billybob@email.com </p>
+         <p>Page Last Modified: <span id="update_date"></span></p>
+      </footer>
+   </div>    
+  <script src="script.js"></script>
   </body>
 </html>
